Fixed some missing linking in AD and a stray cell in floating-point precision sections

--- a/book/14_FFT/14_FFT.ipynb
+++ b/book/14_FFT/14_FFT.ipynb
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discrete Fourier transform (DFT)\n",
+    "## Discrete Fourier Transform (DFT)\n",
     "\n",
     "To evaluate\n",
     "\n",
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fast Fourier transform\n",
+    "## Fast Fourier Transform\n",
     "\n",
     "The straightforward implementation of DFT makes $N$ operations for each of the $N$ Fourier components $c_k$, giving $O(N^2)$ complexity.\n",
     "This makes it impractical for large data sets.\n",
