--- a/book/7_NumericalDerivatives/7_NumericalDerivatives_AD.ipynb
+++ b/book/7_NumericalDerivatives/7_NumericalDerivatives_AD.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -150,21 +150,21 @@
      "output_type": "stream",
      "text": [
       "  x       f(x)      df/dx\n",
-      "0.0    -1.0000     1.0000\n",
-      "0.2    -0.8720     0.3200\n",
-      "0.4    -0.8560    -0.1200\n",
-      "0.6    -0.9040    -0.3200\n",
-      "0.8    -0.9680    -0.2800\n",
-      "1.0    -1.0000     0.0000\n",
-      "1.2    -0.9520     0.5200\n",
-      "1.4    -0.7760     1.2800\n",
-      "1.6    -0.4240     2.2800\n",
-      "1.8     0.1520     3.5200\n",
-      "2.0     1.0000     5.0000\n",
-      "2.2     2.1680     6.7200\n",
-      "2.4     3.7040     8.6800\n",
-      "2.6     5.6560    10.8800\n",
-      "2.8     8.0720    13.3200\n"
+      "0.0    -2.0000     1.0000\n",
+      "0.2    -1.8720     0.3200\n",
+      "0.4    -1.8560    -0.1200\n",
+      "0.6    -1.9040    -0.3200\n",
+      "0.8    -1.9680    -0.2800\n",
+      "1.0    -2.0000     0.0000\n",
+      "1.2    -1.9520     0.5200\n",
+      "1.4    -1.7760     1.2800\n",
+      "1.6    -1.4240     2.2800\n",
+      "1.8    -0.8480     3.5200\n",
+      "2.0     0.0000     5.0000\n",
+      "2.2     1.1680     6.7200\n",
+      "2.4     2.7040     8.6800\n",
+      "2.6     4.6560    10.8800\n",
+      "2.8     7.0720    13.3200\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,21 +201,21 @@
      "output_type": "stream",
      "text": [
       "  x       f(x)    df/dx_analyt   df/dx_ad_forw   df/dx_ad_reve\n",
-      "0.0    -1.0000          1.0000          1.0000          1.0000\n",
-      "0.2    -0.8720          0.3200          0.3200          0.3200\n",
-      "0.4    -0.8560         -0.1200         -0.1200         -0.1200\n",
-      "0.6    -0.9040         -0.3200         -0.3200         -0.3200\n",
-      "0.8    -0.9680         -0.2800         -0.2800         -0.2800\n",
-      "1.0    -1.0000          0.0000          0.0000          0.0000\n",
-      "1.2    -0.9520          0.5200          0.5200          0.5200\n",
-      "1.4    -0.7760          1.2800          1.2800          1.2800\n",
-      "1.6    -0.4240          2.2800          2.2800          2.2800\n",
-      "1.8     0.1520          3.5200          3.5200          3.5200\n",
-      "2.0     1.0000          5.0000          5.0000          5.0000\n",
-      "2.2     2.1680          6.7200          6.7200          6.7200\n",
-      "2.4     3.7040          8.6800          8.6800          8.6800\n",
-      "2.6     5.6560         10.8800         10.8800         10.8800\n",
-      "2.8     8.0720         13.3200         13.3200         13.3200\n"
+      "0.0    -2.0000          1.0000          1.0000          1.0000\n",
+      "0.2    -1.8720          0.3200          0.3200          0.3200\n",
+      "0.4    -1.8560         -0.1200         -0.1200         -0.1200\n",
+      "0.6    -1.9040         -0.3200         -0.3200         -0.3200\n",
+      "0.8    -1.9680         -0.2800         -0.2800         -0.2800\n",
+      "1.0    -2.0000          0.0000          0.0000          0.0000\n",
+      "1.2    -1.9520          0.5200          0.5200          0.5200\n",
+      "1.4    -1.7760          1.2800          1.2800          1.2800\n",
+      "1.6    -1.4240          2.2800          2.2800          2.2800\n",
+      "1.8    -0.8480          3.5200          3.5200          3.5200\n",
+      "2.0     0.0000          5.0000          5.0000          5.0000\n",
+      "2.2     1.1680          6.7200          6.7200          6.7200\n",
+      "2.4     2.7040          8.6800          8.6800          8.6800\n",
+      "2.6     4.6560         10.8800         10.8800         10.8800\n",
+      "2.8     7.0720         13.3200         13.3200         13.3200\n"
      ]
     }
    ],
@@ -263,17 +263,117 @@
     "D_+(x) = e^{-x^2} \\int_0^x e^{t^2} dt.\n",
     "$$\n",
     "\n",
-    "Let us evaluate $D_+(x)$ using 32-point Gaussian quadrature."
+    "Let us evaluate $D_+(x)$ using 32-point Gaussian quadrature. The hidden cell below initializes the quadrature."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from numpy import ones,copy,cos,tan,pi,linspace\n",
+    "\n",
+    "# Generic integration using quadratures\n",
+    "def integrate_quadrature(\n",
+    "    f,   # Function to be integrated \n",
+    "    quad # A pair of lists (x,w) where x are the integration nodes and w are the weights \n",
+    "                        ):\n",
+    "    ret = 0.\n",
+    "    n = len(quad[0])\n",
+    "    for k in range(n):\n",
+    "        xk = quad[0][k]\n",
+    "        wk = quad[1][k]\n",
+    "        ret += wk * f(xk)\n",
+    "    return ret\n",
+    "\n",
+    "######################################################################\n",
+    "#\n",
+    "# Functions to calculate integration points and weights for Gaussian\n",
+    "# quadrature\n",
+    "#\n",
+    "# x,w = gaussxw(N) returns integration points x and integration\n",
+    "#           weights w such that sum_i w[i]*f(x[i]) is the Nth-order\n",
+    "#           Gaussian approximation to the integral int_{-1}^1 f(x) dx\n",
+    "# x,w = gaussxwab(N,a,b) returns integration points and weights\n",
+    "#           mapped to the interval [a,b], so that sum_i w[i]*f(x[i])\n",
+    "#           is the Nth-order Gaussian approximation to the integral\n",
+    "#           int_a^b f(x) dx\n",
+    "#\n",
+    "# This code finds the zeros of the nth Legendre polynomial using\n",
+    "# Newton's method, starting from the approximation given in Abramowitz\n",
+    "# and Stegun 22.16.6.  The Legendre polynomial itself is evaluated\n",
+    "# using the recurrence relation given in Abramowitz and Stegun\n",
+    "# 22.7.10.  The function has been checked against other sources for\n",
+    "# values of N up to 1000.  It is compatible with version 2 and version\n",
+    "# 3 of Python.\n",
+    "#\n",
+    "# Written by Mark Newman <mejn@umich.edu>, June 4, 2011\n",
+    "# You may use, share, or modify this file freely\n",
+    "#\n",
+    "######################################################################\n",
+    "\n",
+    "from numpy import ones,copy,cos,tan,pi,linspace\n",
+    "\n",
+    "def gaussxw(N):\n",
+    "\n",
+    "    # Initial approximation to roots of the Legendre polynomial\n",
+    "    a = linspace(3,4*N-1,N)/(4*N+2)\n",
+    "    x = cos(pi*a+1/(8*N*N*tan(a)))\n",
+    "\n",
+    "    # Find roots using Newton's method\n",
+    "    epsilon = 1e-15\n",
+    "    delta = 1.0\n",
+    "    while delta>epsilon:\n",
+    "        p0 = ones(N,float)\n",
+    "        p1 = copy(x)\n",
+    "        for k in range(1,N):\n",
+    "            p0,p1 = p1,((2*k+1)*x*p1-k*p0)/(k+1)\n",
+    "        dp = (N+1)*(p0-x*p1)/(1-x*x)\n",
+    "        dx = p1/dp\n",
+    "        x -= dx\n",
+    "        delta = max(abs(dx))\n",
+    "\n",
+    "    # Calculate the weights\n",
+    "    w = 2*(N+1)*(N+1)/(N*N*(1-x*x)*dp*dp)\n",
+    "\n",
+    "    return x,w\n",
+    "\n",
+    "def gaussxw(N):\n",
+    "\n",
+    "    # Initial approximation to roots of the Legendre polynomial\n",
+    "    a = linspace(3,4*N-1,N)/(4*N+2)\n",
+    "    x = cos(pi*a+1/(8*N*N*tan(a)))\n",
+    "\n",
+    "    # Find roots using Newton's method\n",
+    "    epsilon = 1e-15\n",
+    "    delta = 1.0\n",
+    "    while delta>epsilon:\n",
+    "        p0 = ones(N,float)\n",
+    "        p1 = copy(x)\n",
+    "        for k in range(1,N):\n",
+    "            p0,p1 = p1,((2*k+1)*x*p1-k*p0)/(k+1)\n",
+    "        dp = (N+1)*(p0-x*p1)/(1-x*x)\n",
+    "        dx = p1/dp\n",
+    "        x -= dx\n",
+    "        delta = max(abs(dx))\n",
+    "\n",
+    "    # Calculate the weights\n",
+    "    w = 2*(N+1)*(N+1)/(N*N*(1-x*x)*dp*dp)\n",
+    "\n",
+    "    return x,w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IntegrateGauss import *\n",
-    "\n",
     "gaussxw32 = gaussxw(32)\n",
     "def gaussxwab32(a,b):\n",
     "    x,w = gaussxw32\n",
@@ -291,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "remove-input"
@@ -336,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -398,8 +498,8 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "CPU times: user 2.11 s, sys: 33.9 ms, total: 2.14 s\n",
-      "Wall time: 2.14 s\n"
+      "CPU times: user 2.19 s, sys: 6.99 ms, total: 2.19 s\n",
+      "Wall time: 2.2 s\n"
      ]
     }
    ],
@@ -414,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -422,8 +522,8 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "CPU times: user 5.77 s, sys: 128 ms, total: 5.9 s\n",
-      "Wall time: 5.98 s\n"
+      "CPU times: user 5.78 s, sys: 47.8 ms, total: 5.83 s\n",
+      "Wall time: 5.84 s\n"
      ]
     }
    ],
@@ -447,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -576,8 +676,8 @@
      "output_type": "stream",
      "text": [
       "Done\n",
-      "CPU times: user 313 ms, sys: 8.88 ms, total: 322 ms\n",
-      "Wall time: 321 ms\n"
+      "CPU times: user 327 ms, sys: 4.02 ms, total: 331 ms\n",
+      "Wall time: 332 ms\n"
      ]
     }
    ],
